# syncazoom

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml
src/: database.rs  helpers.rs  main.rs  zoom.rs
