[package]
name = "syncazoom"
version = "0.1.0"
authors = ["drbh"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.3"
toml = "0.5"
jsonwebtoken = "7"
minreq = { version = "*", features = ["https", "json-using-serde"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.50"
rusqlite = "0.21.0"
job_scheduler = "1.2.1"
chrono = "0.4.11"

[build-dependencies]
clippy = { version = "*", optional = true }
