[package]
name = "syncazoom"
version = "0.1.0"
authors = ["drbh"]
edition = "2018"

repository = "https://github.com/drbh/syncazoom"
description = "A command line app for syncing Zoom metrics to a local database"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["zoom", "video", "metrics"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.3"
toml = "0.5"
jsonwebtoken = "7"
minreq = { version = "2.1.0", features = ["https", "json-using-serde"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.50"
rusqlite = "0.21.0"

# time stuff
cron = "0.6.0"
job_scheduler = "1.2.1"
chrono = "0.4.11"


[build-dependencies]
clippy = { version = "0.0.302", optional = true }
